Resolucao/parser.output
Terminals which are not used

   ELIF
   VALUE
   AND
   OR
   OP_ADD_ONE
   OP_SUB_ONE
   OP_SIZEOF
   GREATER_THAN_OR_EQUALS
   LESS_THAN_OR_EQUALS
   EQUALS
   TYPE_INT
   TYPE_ARRAY
   TYPE_CHAR
   TYPE_STRING
   TYPE_FLOAT


State 30 conflicts: 4 shift/reduce
State 31 conflicts: 4 shift/reduce
State 32 conflicts: 4 shift/reduce
State 33 conflicts: 4 shift/reduce
State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt_list stmt
    3          | stmt

    4 stmt: WHILE expr DO stmt
    5     | IF expr THEN stmt
    6     | IF expr THEN stmt ELSE stmt

    7 @1: /* empty */

    8 stmt: BLOCK_BEGIN @1 stmt_list BLOCK_END
    9     | ID ASSIGN expr SEMI
   10     | SEMI

   11 expr: expr '+' expr
   12     | expr '-' expr
   13     | expr '*' expr
   14     | expr '/' expr
   15     | '(' expr ')'
   16     | NUMBER
   17     | ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15
')' (41) 15
'*' (42) 13
'+' (43) 11
'-' (45) 12
'/' (47) 14
error (256)
NUMBER (258) 16
ID (259) 9 17
WHILE (260) 4
DO (261) 4
IF (262) 5 6
THEN (263) 5 6
ELSE (264) 6
ELIF (265)
BLOCK_BEGIN (266) 8
BLOCK_END (267) 8
ASSIGN (268) 9
SEMI (269) 9 10
VALUE (270)
AND (271)
OR (272)
OP_ADD_ONE (273)
OP_SUB_ONE (274)
OP_SIZEOF (275)
GREATER_THAN_OR_EQUALS (276)
LESS_THAN_OR_EQUALS (277)
EQUALS (278)
TYPE_INT (279)
TYPE_ARRAY (280)
TYPE_CHAR (281)
TYPE_STRING (282)
TYPE_FLOAT (283)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
stmt_list (37)
    on left: 2 3, on right: 1 2 8
stmt (38)
    on left: 4 5 6 8 9 10, on right: 2 3 4 5 6
@1 (39)
    on left: 7, on right: 8
expr (40)
    on left: 11 12 13 14 15 16 17, on right: 4 5 6 9 11 12 13 14 15


state 0

    0 $accept: . program $end

    ID           shift, and go to state 1
    WHILE        shift, and go to state 2
    IF           shift, and go to state 3
    BLOCK_BEGIN  shift, and go to state 4
    SEMI         shift, and go to state 5

    program    go to state 6
    stmt_list  go to state 7
    stmt       go to state 8


state 1

    9 stmt: ID . ASSIGN expr SEMI

    ASSIGN  shift, and go to state 9


state 2

    4 stmt: WHILE . expr DO stmt

    NUMBER  shift, and go to state 10
    ID      shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 13


state 3

    5 stmt: IF . expr THEN stmt
    6     | IF . expr THEN stmt ELSE stmt

    NUMBER  shift, and go to state 10
    ID      shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 14


state 4

    8 stmt: BLOCK_BEGIN . @1 stmt_list BLOCK_END

    $default  reduce using rule 7 (@1)

    @1  go to state 15


state 5

   10 stmt: SEMI .

    $default  reduce using rule 10 (stmt)


state 6

    0 $accept: program . $end

    $end  shift, and go to state 16


state 7

    1 program: stmt_list .
    2 stmt_list: stmt_list . stmt

    ID           shift, and go to state 1
    WHILE        shift, and go to state 2
    IF           shift, and go to state 3
    BLOCK_BEGIN  shift, and go to state 4
    SEMI         shift, and go to state 5

    $default  reduce using rule 1 (program)

    stmt  go to state 17


state 8

    3 stmt_list: stmt .

    $default  reduce using rule 3 (stmt_list)


state 9

    9 stmt: ID ASSIGN . expr SEMI

    NUMBER  shift, and go to state 10
    ID      shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 18


state 10

   16 expr: NUMBER .

    $default  reduce using rule 16 (expr)


state 11

   17 expr: ID .

    $default  reduce using rule 17 (expr)


state 12

   15 expr: '(' . expr ')'

    NUMBER  shift, and go to state 10
    ID      shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 19


state 13

    4 stmt: WHILE expr . DO stmt
   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr

    DO   shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24


state 14

    5 stmt: IF expr . THEN stmt
    6     | IF expr . THEN stmt ELSE stmt
   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr

    THEN  shift, and go to state 25
    '+'   shift, and go to state 21
    '-'   shift, and go to state 22
    '*'   shift, and go to state 23
    '/'   shift, and go to state 24


state 15

    8 stmt: BLOCK_BEGIN @1 . stmt_list BLOCK_END

    ID           shift, and go to state 1
    WHILE        shift, and go to state 2
    IF           shift, and go to state 3
    BLOCK_BEGIN  shift, and go to state 4
    SEMI         shift, and go to state 5

    stmt_list  go to state 26
    stmt       go to state 8


state 16

    0 $accept: program $end .

    $default  accept


state 17

    2 stmt_list: stmt_list stmt .

    $default  reduce using rule 2 (stmt_list)


state 18

    9 stmt: ID ASSIGN expr . SEMI
   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr

    SEMI  shift, and go to state 27
    '+'   shift, and go to state 21
    '-'   shift, and go to state 22
    '*'   shift, and go to state 23
    '/'   shift, and go to state 24


state 19

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | '(' expr . ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    ')'  shift, and go to state 28


state 20

    4 stmt: WHILE expr DO . stmt

    ID           shift, and go to state 1
    WHILE        shift, and go to state 2
    IF           shift, and go to state 3
    BLOCK_BEGIN  shift, and go to state 4
    SEMI         shift, and go to state 5

    stmt  go to state 29


state 21

   11 expr: expr '+' . expr

    NUMBER  shift, and go to state 10
    ID      shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 30


state 22

   12 expr: expr '-' . expr

    NUMBER  shift, and go to state 10
    ID      shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 31


state 23

   13 expr: expr '*' . expr

    NUMBER  shift, and go to state 10
    ID      shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 32


state 24

   14 expr: expr '/' . expr

    NUMBER  shift, and go to state 10
    ID      shift, and go to state 11
    '('     shift, and go to state 12

    expr  go to state 33


state 25

    5 stmt: IF expr THEN . stmt
    6     | IF expr THEN . stmt ELSE stmt

    ID           shift, and go to state 1
    WHILE        shift, and go to state 2
    IF           shift, and go to state 3
    BLOCK_BEGIN  shift, and go to state 4
    SEMI         shift, and go to state 5

    stmt  go to state 34


state 26

    2 stmt_list: stmt_list . stmt
    8 stmt: BLOCK_BEGIN @1 stmt_list . BLOCK_END

    ID           shift, and go to state 1
    WHILE        shift, and go to state 2
    IF           shift, and go to state 3
    BLOCK_BEGIN  shift, and go to state 4
    BLOCK_END    shift, and go to state 35
    SEMI         shift, and go to state 5

    stmt  go to state 17


state 27

    9 stmt: ID ASSIGN expr SEMI .

    $default  reduce using rule 9 (stmt)


state 28

   15 expr: '(' expr ')' .

    $default  reduce using rule 15 (expr)


state 29

    4 stmt: WHILE expr DO stmt .

    $default  reduce using rule 4 (stmt)


state 30

   11 expr: expr . '+' expr
   11     | expr '+' expr .
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    '+'       [reduce using rule 11 (expr)]
    '-'       [reduce using rule 11 (expr)]
    '*'       [reduce using rule 11 (expr)]
    '/'       [reduce using rule 11 (expr)]
    $default  reduce using rule 11 (expr)


state 31

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   12     | expr '-' expr .
   13     | expr . '*' expr
   14     | expr . '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    '+'       [reduce using rule 12 (expr)]
    '-'       [reduce using rule 12 (expr)]
    '*'       [reduce using rule 12 (expr)]
    '/'       [reduce using rule 12 (expr)]
    $default  reduce using rule 12 (expr)


state 32

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   13     | expr '*' expr .
   14     | expr . '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    '+'       [reduce using rule 13 (expr)]
    '-'       [reduce using rule 13 (expr)]
    '*'       [reduce using rule 13 (expr)]
    '/'       [reduce using rule 13 (expr)]
    $default  reduce using rule 13 (expr)


state 33

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   14     | expr '/' expr .

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    '+'       [reduce using rule 14 (expr)]
    '-'       [reduce using rule 14 (expr)]
    '*'       [reduce using rule 14 (expr)]
    '/'       [reduce using rule 14 (expr)]
    $default  reduce using rule 14 (expr)


state 34

    5 stmt: IF expr THEN stmt .
    6     | IF expr THEN stmt . ELSE stmt

    ELSE  shift, and go to state 36

    ELSE      [reduce using rule 5 (stmt)]
    $default  reduce using rule 5 (stmt)


state 35

    8 stmt: BLOCK_BEGIN @1 stmt_list BLOCK_END .

    $default  reduce using rule 8 (stmt)


state 36

    6 stmt: IF expr THEN stmt ELSE . stmt

    ID           shift, and go to state 1
    WHILE        shift, and go to state 2
    IF           shift, and go to state 3
    BLOCK_BEGIN  shift, and go to state 4
    SEMI         shift, and go to state 5

    stmt  go to state 37


state 37

    6 stmt: IF expr THEN stmt ELSE stmt .

    $default  reduce using rule 6 (stmt)
